manifests/hava-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hava
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hava
  template:
    metadata:
      labels:
        app: hava
    spec:
      containers:
      - name: hava
        image: ghcr.io/esekizinci/pipeline-test:74640be9
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
