manifests/hava-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hava-svc
spec:
  selector:
    app: hava
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
